# k8s-operator-workspace

./: .gitignore  LICENSE  README.md  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
appmetadata-controller/: README.md  application-metadata-crd.yaml  application-metadata-example.yaml  pyproject.toml
appmetadata-controller/examples/: sample-app.yaml
appmetadata-controller/examples/valid/: applications.yaml
appmetadata-controller/manifests/: __main__.py  clusterrole.yaml  clusterrolebinding.yaml  config.py  config.yaml  configmap.yaml  crd.yaml  deployment.yaml  handlers.py  kustomization.yaml  metrics.py  models.py  namespace.yaml  role.yaml  serviceaccount.yaml  tmp-configmap.yaml
appmetadata-controller/manifests/files/: config.py  config.yaml  handlers.py  metrics.py  models.py
appmetadata-controller/scripts/: deploy.sh  prepare-kustomize.sh  prepare-manifests.sh  prepare.sh  run-local.sh
appmetadata-controller/src/controller/: __init__.py  __main__.py
docs/: index.md
pet-controller/: BACKLOG.md  Dockerfile  README.md  requirements.txt  test-buddy.yaml
pet-controller/examples/: test-pet.yaml
pet-controller/examples/invalid/: pets.yaml
pet-controller/examples/tests/: buddy-with-status.yaml  demo-pet-with-status.yaml  demo-pet.yaml  live-test-pet.yaml  pending-pet.yaml  pet-examples.yaml  petstore-examples.yaml  test-controller-pet.yaml  test-invalid.yaml  (+1 more)
pet-controller/scripts/: build-and-deploy.sh  deploy-configmap.sh  run-local.sh  test-controller.sh
(+23 files in other folders)
